--- a/frontend/src/components/FilteringTerms/FilteringTerms.css
+++ b/frontend/src/components/FilteringTerms/FilteringTerms.css
@@ -1,11 +1,35 @@
 .search-box {
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   width: 100%;
 }
 
-.search-tr {
+.search-tr2 {
   display: flex;
-  width: 40%;
+  margin: 0px;
+  width: 100%;
+}
+.search-tr1 {
+  display: flex;
+  width: 100%;
+}
+.searchTermInput {
+  margin: 5px;
+  width: 70%;
+  height: 28px;
+  margin-left: 34px;
+}
+
+.inputTerm {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.inputLabel {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 thead {
@@ -19,25 +43,37 @@ thead {
   position: sticky;
   top: 0px;
   z-index: 2;
+  width: 100%;
+}
+
+tbody {
+  width: 60vw !important;
 }
 
 .thead2 {
   position: sticky;
-  top: 73.6px;
+  top: 61.4px;
   z-index: 2;
+  width: 100%;
 }
 
 #table {
-  margin-left: 78px;
-  margin-right: 78px;
+  display: flex;
+
   font-size: 15px;
-  width: 90%;
+  /* width: 90%; */
+  height: fit-content;
+  flex-direction: column;
+  margin-left: 1vw;
 }
 
 .tableWrapper {
-  height: 70vh;
-  width: 90vw;
+  height: 100vh;
+  width: 85vw;
   overflow: scroll;
+  display: flex;
+
+  justify-content: center;
 }
 
 .generalContainer {
@@ -50,7 +86,7 @@ thead {
 
 .th1 {
   display: flex;
-  width: 50%;
+  width: 65%;
   /* height: 100%; */
   /* justify-content: center; */
   margin-top: 12px;
@@ -75,7 +111,7 @@ thead {
 }
 .th2 {
   display: flex;
-  width: 50%;
+  width: 68%;
   /* height: 100%; */
   /* justify-content: center; */
   margin-top: 12px;
@@ -130,7 +166,7 @@ thead {
 
 .th2 {
   display: flex;
-  width: 50%;
+  width: 68%;
   /* height: 100%; */
   /* justify-content: center; */
   margin-top: 12px;
@@ -158,7 +194,7 @@ thead {
 
 .th4 {
   display: flex;
-  width: 50%;
+  width: 52%;
   /* height: 100%; */
   /* justify-content: center; */
   margin-top: 12px;
@@ -213,26 +249,27 @@ thead {
   margin-right: 7px;
 }
 
-.searchTermInput {
-  margin: 10px;
-  width: 90%;
-  height: 28px;
-}
-
 .searchTermInput1 {
-  margin: 10px;
-  width: 90%;
+  width: 60%;
   height: 28px;
+  margin-left: 23px;
 }
 
 tr {
   display: flex;
   width: 100%;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .terms1 {
-  background-color: #efedf4;
-  border-bottom: solid #8985c1;
+  background-color: #e7eef5;
+  border-bottom: solid #3d72a6;
+  width: 100%;
+}
+
+.terms2 {
+  width: 100%;
 }
 
 .checkbox {
@@ -241,4 +278,32 @@ tr {
 
 .checkbox2 {
   border: none;
+}
+
+@media (max-width: 1280px) {
+  tbody {
+    width: 90vw !important;
+  }
+  .search-tr2 {
+    display: flex;
+    margin: 0px;
+    width: 100%;
+  }
+  .search-tr1 {
+    display: flex;
+    width: 100%;
+  }
+  .searchTermInput {
+    margin: 5px;
+    width: 70%;
+    height: 28px;
+    margin-left: 34px;
+  }
+  .tableWrapper {
+    height: 100vh;
+    width: 95vw;
+    overflow: scroll;
+    display: flex;
+    justify-content: center;
+  }
 }
