--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -36,7 +36,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 9px;
 }
 
 h6 {
@@ -70,7 +69,7 @@ h6:hover {
   font-weight: normal;
   color: rgb(209, 45, 20);
   font-weight: bold;
-  background: #ffd1d1;
+
   width: fit-content;
   display: flex;
   align-items: center;
@@ -88,7 +87,6 @@ h7 {
   font-size: 14px;
   color: rgba(12, 16, 64, 0.606);
   font-weight: bold;
-  margin-top: 12px;
 }
 
 h7:hover {
@@ -260,7 +258,7 @@ h1 {
     font-weight: normal;
     color: rgb(209, 45, 20);
     font-weight: bold;
-    background: #ffd1d1;
+
     width: fit-content;
     display: flex;
     align-items: center;
@@ -277,7 +275,7 @@ h1 {
     font-size: 12px;
     color: rgba(12, 16, 64, 0.606);
     font-weight: bold;
-    margin-top: 8px;
+    /* margin-top: 8px; */
     margin-bottom: 2px;
   }
 }
