--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -69,7 +69,7 @@ h6:hover {
   font-weight: normal;
   color: rgb(209, 45, 20);
   font-weight: bold;
-
+  background-color: rgb(251, 185, 185);
   width: fit-content;
   display: flex;
   align-items: center;
