--- a/frontend/src/components/Dataset/BeaconInfo.css
+++ b/frontend/src/components/Dataset/BeaconInfo.css
@@ -17,7 +17,7 @@
 .datasetCard {
   width: 40vw;
   margin: 30px;
-
+  margin-top: 50px !important;
   /* border: 2px solid #3b9ad5; */
   padding: 16px;
   display: flex;
@@ -411,7 +411,7 @@ h5{
   }
 
   .datasetCard {
-    width: 75vw;
+    width: 58vw;
     margin: 30px;
     /* border: 2px solid #3b9ad5; */
     padding: 16px;
@@ -425,7 +425,7 @@ h5{
     justify-content: flex-start;
   }
   .tittle {
-    width: 71vw;
+    width: 54vw;
     background: #c8d4e6;
     border-radius: 2px;
     /* height: 80px; */
@@ -435,6 +435,7 @@ h5{
     font-size: 9px !important;
   }
 
+  
   .tittle h2 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
       'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -478,7 +479,7 @@ h5{
 
 @media (max-width: 800px) {
   .tittleResults {
-    width: 72vw;
+    width: 58vw;
     height: 200px;
   }
   .datasetCardResults {
@@ -526,7 +527,7 @@ h5{
   }
 
   .datasetCard {
-    width: 75vw;
+    width: 58vw;
     margin: 30px;
     /* border: 2px solid #3b9ad5; */
     padding: 16px;
@@ -540,7 +541,7 @@ h5{
     justify-content: flex-start;
   }
   .tittle {
-    width: 71vw;
+    width: 54vw;
     background: #c8d4e6;
     border-radius: 2px;
     /* height: 80px; */
