table for variants

--- a/frontend/src/components/FilteringTerms/FilteringTerms.css
+++ b/frontend/src/components/FilteringTerms/FilteringTerms.css
@@ -18,12 +18,16 @@
   width: 70%;
   height: 28px;
   margin-left: 34px;
+  border: 1px solid rgb(204, 205, 206);
+  border-radius: 2px;
+  box-shadow: rgba(216, 207, 207, 0.25) 0px 1px 1px, rgba(197, 150, 150, 0.13) 0px 0px 1px 1px;
 }
 
 .inputTerm {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  
 }
 
 .inputLabel {
@@ -254,6 +258,9 @@ tbody {
   width: 60%;
   height: 28px;
   margin-left: 23px;
+  border: 1px solid rgb(204, 205, 206);
+  border-radius: 2px;
+  box-shadow: rgba(216, 207, 207, 0.25) 0px 1px 1px, rgba(197, 150, 150, 0.13) 0px 0px 1px 1px;
 }
 
 tr {
