--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -88,6 +88,21 @@ html {
   margin-left: 12px;
 }
 
+.scopeDiv {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.scopeDiv h10 {
+  margin-top: 0px;
+}
+
+.doneButton ion-icon:hover{
+  color: rgb(36, 135, 128);
+}
+
 .modeVariantsQuery {
   color: rgba(12, 16, 64, 0.606);
   font-size: 16px;
@@ -1781,7 +1796,7 @@ h5 {
     align-items: flex-start;
     justify-content: space-around;
     align-content: space-around;
-}
+  }
 
   .labelVariants {
     font-size: 11.5px;
