--- a/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
+++ b/frontend/src/components/Results/IndividualsResults/TableResultsIndividuals.css
@@ -79,7 +79,40 @@ h6:hover {
   border-radius: 2px;
   padding: 3px;
 }
+.handoversDiv {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+}
 
+.handoversDiv ion-icon {
+  font-size: 19px;
+}
+.handoversDiv ion-icon:hover {
+  color: rgb(247, 144, 35);
+}
+
+.datasetContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: center;
+}
+
+.noteHandover {
+  width: 30%;
+  font-size: 12px;
+}
+
+.divNote{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+}
 h7 {
   text-transform: uppercase;
   /* margin-left: 40px; */
@@ -145,6 +178,7 @@ h1 {
   text-overflow: clip !important;
   overflow-inline: scroll;
   overflow: scroll;
+  width: 350px;
   align-content: center;
   align-items: center;
 }
